--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: 1.6.1
+  tag: e0df25991dec976bc800dfddef8a9134d7481005
   pullPolicy: Always
 
 imagePullSecrets:
