--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: b6fd950a52d480c1224eeb8015f924164fe485a6
+  tag: 2.0.1
   pullPolicy: Always
 
 imagePullSecrets:
