修复 Sync All 按钮样式，使其与其他按钮一致 修复 sync_all 版本检测逻辑，与 sync_single_server 保持一致 当检测到 newrelic-infra 时设置 newrelic_installed=True，即使版本解析失败 版本更新到 2.0.7

--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: de7dfde95c07b4969c54dc410e371356494f1c28
+  tag: 2.0.7
   pullPolicy: Always
 
 imagePullSecrets:
