Update image tag to version 2.0.8
.github/workflows/docker-build.yaml	添加 **/*.yml 和 ansible/** 到触发路径
ansible/playbooks/install_newrelic_raw.yml	改进 custom_attributes 解析，增加容错处理
VERSION	版本更新
验证构建

--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: a3b7a2af2782f5b5fcd546740f67fdc1f2802c58
+  tag: 2.0.8
   pullPolicy: Always
 
 imagePullSecrets:
