--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: 1fa021f6672f61c8e57e79e31df2cf44adda54de
+  tag: 2.0.9
   pullPolicy: Always
 
 imagePullSecrets:
