--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: 2.0.9
+  tag: e47994f0f2105652df9b1d9d031ae45f022eb977
   pullPolicy: Always
 
 imagePullSecrets:
