--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: ghcr.io/wangzhonghua1984/newrelic-manager
-  tag: 2.1.5
+  tag: latest
   pullPolicy: Always
 
 imagePullSecrets:
